# cpp-template

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.py  test.cpp
.devcontainer/: Dockerfile
mylibrary/: CMakeLists.txt
mylibrary/include/: mylibrary.hpp
mylibrary/src/: mylibrary.cpp
src/: main.cpp  version.h.in
tests/: CMakeLists.txt  test_basic.cpp
